--- a/mashup_especializado.html
+++ b/mashup_especializado.html
@@ -49,7 +49,7 @@
 	    ?bebe osus:infoNasc/osus:apgarQuintoMinuto ?apgarQuintoMinuto . 
 	    ?bebe osus:infoNasc/osus:parto/osus:gestacao/osus:tempoGestacional ?tempoGestacional . 
 
-	    <b>FILTER</b> (?diasVividos <= 28)
+	    <b>FILTER</b> (?diasVividos < 28)
 	}
             </pre>
         </p>
@@ -87,7 +87,6 @@
 		
 	        <li>  
 	        	<p>
-	        		
 	        	<i class="subSectionOfText"> E'<sub><small>SINASC</small></sub></i> -
 	        	<a href="https://www.dropbox.com/s/z36tzkmhn8r49bt/sbcas_sinasc.ttl?dl=1" download>
 	           		Download Mapeamentos  <i> E'<sub><small>SINASC</small></sub></i>
