--- a/mashup_builder.html
+++ b/mashup_builder.html
@@ -65,6 +65,7 @@
 			<div class="textForRead">
 				Abaixo temos um video ilustrando o uso do Mashup Builder e uma comparação entre um dos mapeamentos dado como entrada e o mapeamento reescrito:
 			</div>
+			<iframe width="660" height="415" src="https://www.youtube.com/embed/25jZpdEB83U" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 		
 
 
