--- a/edit_vis.html
+++ b/edit_vis.html
@@ -18,7 +18,7 @@
 	            <ul class="navbar-nav mr-auto">
 	                <li class="nav-item navoption"><a class="nav-link" href="index.html">Inicio</a></li>
 	                <li class="nav-item navoption"><a class="nav-link" href="visao_semantica.html">Visão Semântica</a></li>
-	                <li class="nav-item navoption"><a class="nav-link" href="edit_vis.html">Editar Visão</a></li>
+	                <li class="nav-item navoption"><a class="nav-link" href="edit_vis.html">Editar Visão Semântica</a></li>
 	                <li class="nav-item navoption"><a class="nav-link" href="mediador_semantico.html">Mediador Semântico</a></li>
 	                <li class="nav-item navoption"><a class="nav-link" href="mashup_builder.html">Mashup Builder</a></li>
 	                <li class="nav-item navoption"><a class="nav-link" href="mashup_especializado.html">Mashups Especializados</a></li>
