--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                <ul class="navbar-nav mr-auto">
                    <li class="nav-item navoption"><a class="nav-link" href="index.html">Inicio</a></li>
                    <li class="nav-item navoption"><a class="nav-link" href="visao_semantica.html">Visão Semântica</a></li>
-                   <li class="nav-item navoption"><a class="nav-link" href="edit_vis.html">Editar Visão</a></li>
+                   <li class="nav-item navoption"><a class="nav-link" href="edit_vis.html">Editar Visão Semântica</a></li>
                    <li class="nav-item navoption"><a class="nav-link" href="mediador_semantico.html">Mediador Semântico</a></li>
                    <li class="nav-item navoption"><a class="nav-link" href="mashup_builder.html">Mashup Builder</a></li>
                    <li class="nav-item navoption"><a class="nav-link" href="mashup_especializado.html">Mashups Especializados</a></li>
@@ -76,7 +76,7 @@
             Outra facilidade do portal é a ferramenta <i>Mashup Buider</i>, a qual permite a construção de Mashup de Dados de forma simples e automática.
         </div>
             <figure class="text-center">
-              <img class="mx-auto d-block figure-img img-fluid rounded z-depth-1" src="img/visaosemantica.png">
+              <img class="mx-auto d-block figure-img img-fluid rounded z-depth-1" src="img/vs.png">
               <figcaption class="figure-caption"><b><i>Figura 1: Representação da camada semântica</i></b></figcaption>
             </figure>
     </div>
@@ -159,7 +159,7 @@
 
 
 
-  O portal atualmente <i>SemanticSSUS</i> publica duas bases de Dados do SUS: o SIM (Sistema de Informações sobre Mortalidade) e o SINASC(Sistema de Informações sobre NASCidos vivos). Essa fontes estão integradas semanticamente e já podem ser acessada através da visão ontológica do portal. O resultado da Integração semântica das fontes de dados SIM e SINASC pode ser visualizado na aba <a href="">Visão Semântica</a>. 
+  O portal atualmente <i>SemanticSSUS</i> publica duas bases de Dados do SUS: o SIM (Sistema de Informações sobre Mortalidade) e o SINASC(Sistema de Informações sobre NASCidos vivos). Essa fontes estão integradas semanticamente e já podem ser acessada através da visão ontológica do portal. O resultado da Integração semântica das fontes de dados SIM e SINASC pode ser visualizado na aba <a href="visao_semantica.html">Visão Semântica</a>. 
         </div>
     </div>
     <br/>
