--- a/mashup_builder.html
+++ b/mashup_builder.html
@@ -32,18 +32,14 @@
 		<div class="sectionOfText">Mashup Builder</div>
 		<div class="textForRead">
 			<p>Uma das facilidades do <i>SemanticSUS</i> é a ferramenta <i>Mashup Builder</i>, uma ferramenta que permite a construção automática de <i>mashup</i> de dados especializado usando a integração semântica à priori das fontes de dados. Como mostrado na Figura abaixo</i>, o <i>Mashup Builder</i> recebe como entrada a especificação da visão de aplicação sobre a ontologia de domínio, e baseado na integração semântica, e realiza a materialização do <i>mashup</i> especializado requerido pelo usuário.</p>
-		
-			<figure class="text-center">
-              <img class="mx-auto d-block figure-img img-fluid rounded z-depth-1" src="img/mashup_builder.png" 
-              />
-              <figcaption class="figure-caption"><b><i>Figura 1: Construção de Mashup de Dados Especializado</i></b></figcaption>
-            </figure>
+
 			
     	</div>
 
-			<br/>
-			<br/>
-			<div class="subSectionOfText">Passo-a-passo do Mashup Builder:</div>
+		
+			
+			<div class="sectionOfText">Passo-a-passo do Mashup Builder:</div>
+				
 			<div class="textForRead">
 				<ol>
 					<li>Primeiro, o usuário deve especificar a necessidade de informação da aplicação  através de uma consulta (facetada) definida sobre a ontologia de domínio.</li>
@@ -59,14 +55,19 @@
 						</ul>
 					</li>
 				</ol>
+				<figure class="text-center">
+              	<img class="mx-auto d-block figure-img img-fluid rounded z-depth-1" src="img/mashup_builder.png" 
+              />
+              	<figcaption class="figure-caption"><b><i>Figura 1: Construção de Mashup de Dados Especializado</i></b></figcaption>
+            	</figure>
 			</div>
 			
-			<div class="sectionOfText">Exemplos de Mashup</div>
+			<div class="sectionOfText">Exemplo de Construção de Mashup Utilizando o Mashup Builder</div>
 			<div class="textForRead">
-				Abaixo temos um video ilustrando o uso do Mashup Builder e uma comparação entre um dos mapeamentos dado como entrada e o mapeamento reescrito:
+				Abaixo temos um video ilustrando o uso do Mashup Builder e uma comparação entre um dos mapeamentos dado como entrada e o mapeamento reescrito. O resultado desse mashup e sua descrição estão disponíveis na aba <a href="mashup_especializado.html">Mashup Especializado</a>.
 			</div>
 			<iframe width="660" height="415" src="https://www.youtube.com/embed/25jZpdEB83U" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-		
+			
 
 
 	</div>
