--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
     <br/>
 
     <div id="construindo_mashub">
-        <p class="sectionOfText">5. Construindo Mashup de Dados Especializado </p>
+        <p class="sectionOfText">5. Construindo Mashup de Dados Especializado usando o Mashup Builder </p>
         <div class="textForRead">
              Os usuários podem especificar uma visão de <i>Mashup</i> especializada através de uma interface de consulta facetada sobre a ontologia de domínio, e o <i>Mashup Builder</i> irá materializar a visão de <i>mashup</i> de forma automática, baseado no resultado da integração semântica.<a href="mashup_builder.html">(Ler mais sobre)</a>
         </div>
