--- a/mashup_builder.html
+++ b/mashup_builder.html
@@ -38,9 +38,14 @@
 
 		
 			
-			<div class="sectionOfText">Passo-a-passo do Mashup Builder:</div>
-				
+			<div class="sectionOfText">Construindo Mashup de Dados Especializado usando o Mashup Builder</div>
+				<br>
 			<div class="textForRead">
+				<figure class="text-center">
+              	<img class="mx-auto d-block figure-img img-fluid rounded z-depth-1" src="img/mashup_builder.png" 
+              />
+              	<figcaption class="figure-caption"><b><i>Figura 1: Construção de Mashup de Dados Especializado</i></b></figcaption>
+            	</figure>
 				<ol>
 					<li>Primeiro, o usuário deve especificar a necessidade de informação da aplicação  através de uma consulta (facetada) definida sobre a ontologia de domínio.</li>
 					
@@ -55,11 +60,8 @@
 						</ul>
 					</li>
 				</ol>
-				<figure class="text-center">
-              	<img class="mx-auto d-block figure-img img-fluid rounded z-depth-1" src="img/mashup_builder.png" 
-              />
-              	<figcaption class="figure-caption"><b><i>Figura 1: Construção de Mashup de Dados Especializado</i></b></figcaption>
-            	</figure>
+
+				<iframe width="660" height="415" src="https://www.youtube.com/embed/DrfqNc2eXwE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			</div>
 			
 			<div class="sectionOfText">Exemplo de Construção de Mashup Utilizando o Mashup Builder</div>
