--- a/mediador_semantico.html
+++ b/mediador_semantico.html
@@ -29,7 +29,7 @@
 
 			<div class="container">
 	
-				<div class="sectionOfText">Mediador Semântico</div>
+				<div class="sectionOfText">Mediador <S></S>emântico</div>
 				<div class="textForRead">
 					<p>
 						O Mediador Semântico (MS) é um sistema que  permite que sejam realizadas  consultas às fontes de dados através da Visão Ontológica definida pela integração semântica. A visão ontológica provê um único ponto de acesso aos dados,  e permite que consultas sejam formuladas em termos da ontologia de domínio, de forma que o usuário não precisa entender das fontes de dados, nem das relações entre elas, e a resposta é recebida de forma inteligível.
@@ -65,7 +65,7 @@
 					    <li> O resultado das sub-consultas são integrados usando os links <i>sameAs</i>, e o resultado final  é traduzido em RDF, de acordo com a consulta SPARQL.</li>
 					    <li> O resultado é então retornado para o usuário</li>
 					</ol>
-					
+					<iframe width="660" height="415" src="https://www.youtube.com/embed/3eXdpQfxLoc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 				</div>
 
 				<div class="sectionOfText">
