--- a/index.html
+++ b/index.html
@@ -154,12 +154,11 @@
               <li> Especificação das regras de fusão para as propriedades de $S$.  Estas regras são definidas com base na qualidade da fonte $S$, e são necessárias na resolução de conflitos gerados por inconsistências nos dados. 
               </li>
             </ol>
-
-
-
-
-
-  O portal atualmente <i>SemanticSSUS</i> publica duas bases de Dados do SUS: o SIM (Sistema de Informações sobre Mortalidade) e o SINASC(Sistema de Informações sobre NASCidos vivos). Essa fontes estão integradas semanticamente e já podem ser acessada através da visão ontológica do portal. O resultado da Integração semântica das fontes de dados SIM e SINASC pode ser visualizado na aba <a href="visao_semantica.html">Visão Semântica</a>. 
+            O portal atualmente <i>SemanticSSUS</i> publica duas bases de Dados do SUS: o SIM (Sistema de Informações sobre Mortalidade) e o SINASC(Sistema de Informações sobre NASCidos vivos). Essa fontes estão integradas semanticamente e já podem ser acessada através da visão ontológica do portal. O resultado da Integração semântica das fontes de dados SIM e SINASC pode ser visualizado na aba <a href="visao_semantica.html">Visão Semântica</a>. 
+            <figure class="text-center">
+              <img class="mx-auto d-block figure-img img-fluid rounded z-depth-1" src="img/frameworkeresultado.png" style="width: 60%">
+              <figcaption class="figure-caption"><b><i> Figura 4a: Framework da utilizado para realizar a  Integração Semântica; Figura 4b: Resultado da Integração Semântica.</i></b></figcaption>
+            </figure>
         </div>
     </div>
     <br/>
