--- a/visao_semantica.html
+++ b/visao_semantica.html
@@ -40,12 +40,17 @@
             Visão Semântica
         </p>
         <div class="textForRead">
-            A <b>visão semântica</b> se trata de uma visão unificada sobre as fontes de dados que utiliza uma ontologia para dar semântica unificada aos dados, independente da fonte de dados originaria. Abaixo, ilustra o framework de integração semantica utilizado pelo SemanticSUS (Figura 1a, bem como o resultado dessa integração: um conjunto de especificações relacionadas a cada etapa do processo de integração semântica.
-        <figure class="text-center">
-              <img class="mx-auto d-block figure-img img-fluid rounded z-depth-1" src="img/frameworkeresultado.png">
-              <figcaption class="figure-caption"><b><i> Figura 1a: Framework da utilizado para realizar a  Integração Semântica; Figura 1b: Resultado da Integração Semântica.</i></b></figcaption>
-        </figure>
+            A <b>visão semântica</b> se trata de uma visão unificada sobre as fontes de dados que utiliza uma ontologia para dar semântica unificada aos dados, independente da fonte de dados originaria. 
+            <!--Abaixo, ilustra o framework de integração semantica utilizado pelo SemanticSUS (Figura 1a, bem como o resultado dessa integração: um conjunto de especificações relacionadas a cada etapa do processo de integração semântica.-->
+
+
+
         </div>    
+                    <figure class="text-center">
+              <img class="mx-auto d-block figure-img img-fluid rounded z-depth-1" style="width: 30%" src="img/visaoAtual.png">
+              <figcaption class="figure-caption"><b><i>Figura 1: Representação da Integração Semântica realizada no processo de construção da Visão Semântica atual</i></b>
+            </figcaption>
+            </figure>
 
         <hr>
         <div id="menu_index">
