--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
 	<div style="background-color: red">
        <nav class="navbar navbar-expand navbar-dark bg-dark">
-           <a class="navbar-brand" href="#">SemanticSUS </a>
+           <a class="navbar-brand" href="index.html">SemanticSUS </a>
 
            <div class="collapse navbar-collapse">
                <ul class="navbar-nav mr-auto">
