--- a/mashup_builder.html
+++ b/mashup_builder.html
@@ -12,7 +12,7 @@
 <body>
 	<div style="background-color: red">
 	    <nav class="navbar navbar-expand navbar-dark bg-dark">
-	        <a class="navbar-brand" href="#">SemanticSUS </a>
+	        <a class="navbar-brand" href="index.html">SemanticSUS </a>
 
 	        <div class="collapse navbar-collapse">
 	            <ul class="navbar-nav mr-auto">
@@ -28,8 +28,22 @@
 	</div>
 
 	<div class="container">
+		<div id="menu_mb">
+	        <p class="sectionOfText">
+	            <a name="lista_conteudo" id="lista_conteudo"></a>
+	            Conteúdo
+	        </p>
+	        <p class="textForRead">
+	            <ol>
+	               <li><a class="conteudo_link" href="#whatismb"> O que é o Mashup Builder? </a></li>
+	               <li><a class="conteudo_link" href="#construindomb"> Construindo Mashup de Dados Especializado usando o Mashup Builder </a></li>
+	               <li><a class="conteudo_link" href="#exemplomb"> Exemplo de Construção de Mashup Utilizando o Mashup Builder </a></li>
+	               <li><a class="conteudo_link" href="#acessomb"> Acesso ao Mashup Builder </a></li>
+	           </ol>
+	       </p>
+	    </div>
 
-		<div class="sectionOfText">Mashup Builder</div>
+		<div class="sectionOfText" id="whatismb">O que é o Mashup Builder?</div>
 		<div class="textForRead">
 			<p>Uma das facilidades do <i>SemanticSUS</i> é a ferramenta <i>Mashup Builder</i>, uma ferramenta que permite a construção automática de <i>mashup</i> de dados especializado usando a integração semântica à priori das fontes de dados. Como mostrado na Figura abaixo</i>, o <i>Mashup Builder</i> recebe como entrada a especificação da visão de aplicação sobre a ontologia de domínio, e baseado na integração semântica, e realiza a materialização do <i>mashup</i> especializado requerido pelo usuário.</p>
 
@@ -38,7 +52,7 @@
 
 		
 			
-			<div class="sectionOfText">Construindo Mashup de Dados Especializado usando o Mashup Builder</div>
+			<div class="sectionOfText" id="construindomb">Construindo Mashup de Dados Especializado usando o Mashup Builder</div>
 				<br>
 			<div class="textForRead">
 				<figure class="text-center">
@@ -64,13 +78,20 @@
 				<iframe width="660" height="415" src="https://www.youtube.com/embed/DrfqNc2eXwE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			</div>
 			
-			<div class="sectionOfText">Exemplo de Construção de Mashup Utilizando o Mashup Builder</div>
+			<div class="sectionOfText" id="exemplomb">Exemplo de Construção de Mashup Utilizando o Mashup Builder</div>
 			<div class="textForRead">
 				Abaixo temos um video ilustrando o uso do Mashup Builder e uma comparação entre um dos mapeamentos dado como entrada e o mapeamento reescrito. O resultado desse mashup e sua descrição estão disponíveis na aba <a href="mashup_especializado.html">Mashup Especializado</a>.
+				<iframe width="660" height="415" src="https://www.youtube.com/embed/25jZpdEB83U" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			</div>
-			<iframe width="660" height="415" src="https://www.youtube.com/embed/25jZpdEB83U" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-			
 
+
+			<div class="sectionOfText" id="acessomb">
+				Acesso ao Mashup Builder
+			</div>
+		
+			<div class="textForRead">
+				O acesso ao Mashup Builder não está disponivel ao público, pois isso implicaria permitir o acesso a dados sensiveis. Apenas gestores e pessoas autorizadas podem ter acesso a essa ferramenta e esses dados.
+			</div>
 
 	</div>
 
