--- a/visao_semantica.html
+++ b/visao_semantica.html
@@ -12,7 +12,7 @@
   <body>
 	<div style="background-color: red">
 	    <nav class="navbar navbar-expand navbar-dark bg-dark">
-	        <a class="navbar-brand" href="#">SemanticSUS </a>
+	        <a class="navbar-brand" href="index.html">SemanticSUS </a>
 
 	        <div class="collapse navbar-collapse">
 	            <ul class="navbar-nav mr-auto">
@@ -40,7 +40,7 @@
             Visão Semântica
         </p>
         <div class="textForRead">
-            A <b>visão semântica</b> se trata de uma visão unificada sobre as fontes de dados que utiliza uma ontologia para dar semântica unificada aos dados, independente da fonte de dados originaria. 
+            A <b>visão semântica</b> se trata de uma visão unificada sobre as fontes de dados que utiliza uma ontologia para dar semântica unificada aos dados, independente da fonte de dados originaria. O portal atualmente SemanticSSUS publica duas bases de Dados do SUS: o SIM (Sistema de Informações sobre Mortalidade) e o SINASC(Sistema de Informações sobre NASCidos vivos). Essa fontes estão integradas semanticamente e já podem ser acessada através da visão ontológica do portal. 
             <!--Abaixo, ilustra o framework de integração semantica utilizado pelo SemanticSUS (Figura 1a, bem como o resultado dessa integração: um conjunto de especificações relacionadas a cada etapa do processo de integração semântica.-->
 
 
@@ -143,7 +143,7 @@
                 </ul>
             
             <div id="is_vsl_sim">
-                <i class="subSectionOfText"> 3.1 Visão Local do SIM (E<sub><small>SIM</small></sub>)</i>
+                <i class="subSectionOfText"> 3.1 Visão Local do SIM (V<sub><small>SIM</small></sub>)</i>
                 <ul>
                     <li>
                         <a href="https://www.dropbox.com/s/chtk7i8calgqnd1/sbcas_sim.ttl?dl=1" download>
@@ -159,7 +159,7 @@
             </div>    
             
             <div id="is_vsl_sinasc">     
-                <i class="subSectionOfText"> 3.2 Visão Local do SINASC (E<sub><small>SINASC</small></sub>)</i>
+                <i class="subSectionOfText"> 3.2 Visão Local do SINASC (V<sub><small>SINASC</small></sub>)</i>
                 <ul>
                     <li>                    
                         <a href="https://www.dropbox.com/s/z36tzkmhn8r49bt/sbcas_sinasc.ttl?dl=1" download>
