--- a/mashup_especializado.html
+++ b/mashup_especializado.html
@@ -12,7 +12,7 @@
   <body>
 	<div style="background-color: red">
 	    <nav class="navbar navbar-expand navbar-dark bg-dark">
-	        <a class="navbar-brand" href="#">SemanticSUS </a>
+	        <a class="navbar-brand" href="index.html">SemanticSUS </a>
 
 	        <div class="collapse navbar-collapse">
 	            <ul class="navbar-nav mr-auto">
@@ -27,6 +27,7 @@
 	    </nav>
 	</div> 
 	<div class="container">
+
 		<p class="sectionOfText">
             Mashup RMN (Risco Morte Neonatal)
         </p>
@@ -35,6 +36,11 @@
         	Esse mashup foi utilizado no desenvolvimento de um modelo preditivo para estabelecer o risco de morte neonatal. O mashup RMN deverá conter as seguintes informações sobre as crianças que morreram antes de completarem 28 dias de vida (período neonatal):  peso, idade gestacional, Apgar, e prévios relatórios de  natimorto da mãe.
             
         </p>
+        <figure class="text-center">
+              <img class="mx-auto d-block figure-img img-fluid rounded z-depth-1" style="width: 30%" src="img/mashupframework.png">
+              <figcaption class="figure-caption"><b><i>Figura 1: Representação da Integração Semântica realizada no processo de construção do Mashup RMN</i></b>
+            </figcaption>
+            </figure>
 		<hr/>
       
 		<div >
