--- a/visao_semantica.html
+++ b/visao_semantica.html
@@ -163,7 +163,7 @@
                 <ul>
                     <li>                    
                         <a href="https://www.dropbox.com/s/z36tzkmhn8r49bt/sbcas_sinasc.ttl?dl=1" download>
-                            Download Mapeamentos  <i> E<sub><small>SINASC</small></sub></i>
+                            Mapeamentos R2RML
                         </a>
                     </li>
                     <li>
