--- a/mashup_especializado.html
+++ b/mashup_especializado.html
@@ -37,7 +37,7 @@
             
         </p>
         <figure class="text-center">
-              <img class="mx-auto d-block figure-img img-fluid rounded z-depth-1" style="width: 30%" src="img/mashupframework.png">
+              <img class="mx-auto d-block figure-img img-fluid rounded z-depth-1" style="width: 30%" src="img/mf.png">
               <figcaption class="figure-caption"><b><i>Figura 1: Representação da Integração Semântica realizada no processo de construção do Mashup RMN</i></b>
             </figcaption>
             </figure>
