--- a/mashup_especializado.html
+++ b/mashup_especializado.html
@@ -50,7 +50,14 @@
             <b class="subSectionOfText">
                 2.1 Consulta de Especificação da Visão do Mashup
             </b> 
-
+            <div class="textForRead">
+                <ul>
+                    <a href="static/ontologies/osus_mashup_rmn.owl" download>
+                        Download da Ontologia de Aplicação do Mashup
+                    </a>
+                </ul>
+            </div>
+<!--
             <pre>
 	<b>SELECT</b> *
 	<b>WHERE</b> {
@@ -66,13 +73,13 @@
 	}
             </pre>
 
-
+-->
             <b class="subSectionOfText">
                 2.2 Ontologia da Visão do Mashup
             </b>        
             <div class="textForRead">
                 <ul>
-                    <a href="img/ontoMashup.png">Representação visual da ontologia da Visão do Mashup</a>
+                    <a href="img/onto_mashup_rmn.png">Representação visual da ontologia da Visão do Mashup</a>
                 </ul>
             </div>
             </ul>
@@ -113,7 +120,7 @@
                      <a href="https://www.dropbox.com/s/pqglynt54j5k984/sbcas_sim_r.ttl?dl=1" download>Download Mapeamentos R2RML</a>
                     </li>
                     <li>
-                      <a href="img/o_esim.png">
+                      <a href="img/o_sim_rmn.png">
                             Representação visual da Ontologia Local 
                         </a>       
                     </li>
@@ -138,7 +145,7 @@
         	           </a>
                    </li>
                    <li>
-                      <a href="img/o_esinasc.png">
+                      <a href="img/o_sinasc_rmn.png">
                             Representação visual da Ontologia Local 
                         </a>       
                     </li>
