--- a/index.html
+++ b/index.html
@@ -60,7 +60,6 @@
                <li><a class="conteudo_link" href="#consultando_visao"> Consultando as fontes de dados através da Visão Semântica </a></li>
                <li><a class="conteudo_link" href="#construindo_mashub"> Construindo Mashup de Dados Especializado </a></li>
                <li><a class="conteudo_link" href="#ex_mashup"> Exemplos de Mashups Especializados </a></li>
-               <li><a class="conteudo_link" href="#referencia"> Referências </a></li>
                <li><a class="conteudo_link" href="#agradecimentos"> Agradecimentos </a></li>
            </ol>
        </p>
@@ -188,19 +187,13 @@
     </div>
     <br/>
 
-    <div id="referencia">
-        <p class="sectionOfText">7. Referências </p>
-        <div class="textForRead">
-            ...
-        </div>
-    </div>
-    <br/>
+
 
     <div id="agradecimentos">
-        <p class="sectionOfText">8. Agradecimentos </p>
-        <div class="textForRead">
-            ...
-        </div>
+        <p class="sectionOfText">7. Agradecimentos </p>
+      
+          <img src="img\logo_unificada.png" >
+
     </div>
     <br/>
 
