--- a/visao_semantica.html
+++ b/visao_semantica.html
@@ -68,7 +68,7 @@
                         </ul>
                     </li>
                     <li>
-                        <a class="conteudo_link" href="#is_vsl"> Visões Virtuais Locais </a>
+                        <a class="conteudo_link" href="#is_vsl"> Visões Locais </a>
                         <ul style="list-style-type: none; text-indent: -2.5em;">
                             <li><a class="conteudo_link" href="#is_vsl_sim"> 3.1 Visão Local do SIM</li></a>
                             <li><a class="conteudo_link" href="#is_vsl_sinasc"> 3.1 Visão Local do SINASC</li></a>
@@ -133,10 +133,10 @@
 
         <div id="is_vsl" class="textForRead">
             <p class="sectionOfText">
-                3. Visões Virtuais Locais
+                3. Visões Locais
             </p>
             
-                <b>Definição:</b> As visões virtuais locais são compostas por uma ontologia local e um conjunto de mapeamentos, onde:
+                <b>Definição:</b> As visões locais são compostas por uma ontologia local e um conjunto de mapeamentos, onde:
                 <ul>
                 <li>Ontologia Local: Um subconjunto de termo da ontologia de dominio</li>
                 <li>Mapeamentos: Especificam o relacionamento entre as entidades existentes na fonte de dados e os termos da ontologia de dominio.</li>    
