--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
               <li> <b>Integração Semântica (IS):</b> O resultado da IS define uma visão virtual integrada das múltiplas fontes de dados. Na IS usamos um <i>framework</i> baseado em 3 camadas, como sumarizado na Figura 3. De acordo com esse <i>framework</i>, o resultado da IS  é uma n-tupla $\lambda=(O_D,  {V_1},...,{V_n}, L, F, Q)$, onde:
                 <ul>
                 <li> $O_D$ é a ontologia de Domínio.</li>
-                <li> $V_1, ..., V_n$ são especificações de visões virtuais locais descritas pelas ontologias locais $O_{V_1},...,O_{V_n}$.</li>
+                <li> $V_1, ..., V_n$ são especificações de visões locais descritas pelas ontologias locais $O_{V_1},...,O_{V_n}$.</li>
                 <li> $L$ é um conjunto de regras de <i>linkage</i> (links semânticos) definidas entre as classes semanticamente semelhantes das ontologias locais. </li>
                 <li> $F$ é um conjunto de  regras de fusão as quais especificam o processo de fusão de objetos relacionados através de um link <i>sameAS</i> em uma única representação.</li> 
                 <li> $Q$ é um conjunto de métricas de avaliação de qualidade, que são usadas para quantificar a qualidade das fontes de dados.</li> 
@@ -146,7 +146,7 @@
             No SemanticSUS, o processo de Integração Semântica (IS)  é baseado na abordagem <i>pay-as-you-go</i>. Essa abordagem permite que a IS possa ser realizada de forma incremental, e a medida que mais esforço é investido na integração semântica de novas fontes de dados, o portal poderá atender as necessidades de um maior número de aplicações. O processo de IS de uma  fonte $S$ segue os seguintes passos: 
 
             <ol>
-              <li> Especificação da visão virtual local $V_S$= &lt $O_S$, $M_S$ &gt  onde  $O_S$  é a ontologia da visão, e $M_S$ é um conjunto de regras que mapeiam o vocabulário de  $O_S$ no vocabulário da fonte S.  Note que $O_S$  descreve a fonte de dados usando o vocabulário da Ontologia de domínio,  portanto $O_S$  é um subconjunto de $O_D$. Na construção da ontologia  de domínio também adotamos o enfoque <i>pay-as-you-go</i>. 
+              <li> Especificação da visão local $V_S$= &lt $O_S$, $M_S$ &gt  onde  $O_S$  é a ontologia da visão, e $M_S$ é um conjunto de regras que mapeiam o vocabulário de  $O_S$ no vocabulário da fonte S.  Note que $O_S$  descreve a fonte de dados usando o vocabulário da Ontologia de domínio,  portanto $O_S$  é um subconjunto de $O_D$. Na construção da ontologia  de domínio também adotamos o enfoque <i>pay-as-you-go</i>. 
               </li>
               <li> Especificação das Regras de <i>Linkage</i> as quais serão usadas para gerar Links semânticos, que mapeiam instâncias de $S$ com instâncias de outras fontes de dados que representam o mesmo objeto do mundo real (<i>resolução de entidades</i>). Em OWL, esses links são estabelecidos através da propriedade <i>owl:sameAs</i>. O processo de identificação desses <i>links</i> é conhecido como <i>linkage</i> de dados. 
               </li>
